src/snapshot_middleware/snapshots/librojo__snapshot_middleware__toml__test__with_metadata.snap
---
source: src/snapshot_middleware/toml.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: foo.toml
  relevant_paths:
    - foo.toml
    - foo.meta.json
    - foo.meta.jsonc
  context:
    emit_legacy_scripts: true
  specified_id: manually specified
name: foo
class_name: ModuleScript
properties:
  Source:
    String: "return {\n\tarray = {1, 2, 3},\n\tbool = false,\n\tint = 123,\n}"
children: []
